# decentralized

./: .gitignore  CLUSTER_QUICK_START.md  COMPARISON_WORKFLOW.md  DEPLOYMENT_SUMMARY.md  PUSH_TO_GITHUB.sh  QUANTIZATION_GUIDE.md  QUICK_REFERENCE.md  README.md  README_FEDERATED_LEARNING.md  START_HERE.md  TECHNICAL_IMPLEMENTATION.md  TIME_LIMIT_GUIDE.md  analyze_distribution.py  compare_quantizations.py  compare_training_approaches.py  create_comparison_plots.py  demo_personalized_fl.py  print_results_table.py  pyproject.toml  pyproject_fp16.toml  pyproject_fp32.toml  pyproject_int8.toml  run_comparison.sh  run_noniid_experiment.py  set_rounds.sh  submit_job.sh  submit_time_comparison.sh  upload_to_cluster.sh  validate_setup.sh
eurosat/: __init__.py  battery_aware_strategy.py  battery_simulation.py  client_app.py  cubesat_battery_reader.py  server_app.py  task.py
experiments/: iid_baseline.toml  non_iid_realistic.toml
frontend/: .gitignore  index.html  package.json  webhook_server.py
frontend/src/: App.tsx  index.css
frontend/src/components/: BatteryConsoleView.tsx  EarthViewer.tsx
frontend/src/contexts/: ApiContext.tsx
frontend/src/pages/: Index.tsx
outputs/2025-11-14/15-02-47/: final_model.pt
outputs/2025-11-15/11-35-36/: final_model.pt
wandb/: latest-run
wandb/run-20251114_150247-sej0xuas/: run-sej0xuas.wandb
wandb/run-20251114_150247-sej0xuas/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
