# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "berlin25-eurosat"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "wandb==0.23.0",
    "pyserial>=3.5",
    "requests>=2.31.0",
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
    "pydantic>=2.12.4",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "hackathon"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "eurosat.server_app:app"
clientapp = "eurosat.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 3     # More rounds to see battery depletion
fraction-train = 0.5
local-epochs = 1
lr = 0.001

# Battery simulation config (satellite resource constraints)  
battery-enabled = true
initial-battery = 80.0        # Standard starting battery
charge-rate = 6.0            # Moderate solar charging rate
train-cost = 12.0            # Moderate training cost
comm-cost = 4.0              # Moderate communication cost  
min-battery-threshold = 30.0 # Standard threshold
day-night-cycle = true
orbit-period = 6             # Standard orbit period

# CubeSat integration (real hardware)
cubesat-enabled = false  # Set to true to use real CubeSat
cubesat-port = "/dev/cu.usbserial-1110"
cubesat-baud = 9600
cubesat-id = 0  # Which satellite ID is the CubeSat (0-9)

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true
